# fed-a11y

./: .codeclimate.yml  .dockerignore  .gitignore  .pa11yci  Dockerfile  MANIFEST.in  README.md  config.py  main.py  requirements.txt  setup.cfg  setup.py
.circleci/: .pa11yci  config.yml  package.json
.github/: CONTRIBUTING.md  STYLE-GUIDE.md
.github/ISSUE_TEMPLATE/: bug-report.md  user-story.md
feda11y/: __init__.py  models.py
feda11y/main/: __init__.py  routes.py
feda11y/static/js/: analytics.js  faq.js  index.js
feda11y/static/styles/: 404.css  about.css  analytics.css  base.css  bootstrap-table.css  index.css
feda11y/templates/: about.html  analytics.html  base.html  faq.html  index.html  sitemap.xml
feda11y/templates/errors/: 404.html  500.html
feda11y/templates/includes/: footer.html  head.html  nav.html
tests/: config_test.py  conftest.py  fixtures.py  test_data.py  test_factory.py  test_models.py  test_routes.py
