[metadata]
name = fed-a11y
author = Scott McAllister
version = 1.0.0
url = https://www.feda11y.com
license = GNU-GENERAL-PUBLIC-LICENSE
maintainer = csmcallister
maintainer_email = mcallistercs@gmail.com
description = Automated accessibility testing of U.S. Federal Government websites using a serverless infrastructure.
long_description = file: README.md
long_description_content_type = text/markdown

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    feda11y
omit =
    */static/*
    */templates/*
    */cli.py

[flake8]
ignore = D203, W293, W291, E116, W292, E303
exclude = tests/fixtures/*
    # No need to traverse these directories
    .git, .github, .circleci, __pycache__, env, tests/fixtures.py
max-complexity = 10